@@ -1,12 +1,9 @@
 package backend.shoppetproject.service;
 
+import backend.shoppetproject.dto.BasketItemDto;
 import backend.shoppetproject.dto.ProductDto;
-import backend.shoppetproject.entity.BasketEntity;
-import backend.shoppetproject.entity.ProductEntity;
-import backend.shoppetproject.entity.UserEntity;
-import backend.shoppetproject.repository.BasketRepository;
-import backend.shoppetproject.repository.ProductRepository;
-import backend.shoppetproject.repository.UserRepository;
+import backend.shoppetproject.entity.*;
+import backend.shoppetproject.repository.*;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
@@ -14,7 +11,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 public class UserService {
@@ -22,38 +19,119 @@ public class UserService {
     private final ProductRepository productRepository;
     private final UserRepository userRepository;
     private final BasketRepository basketRepository;
+    private final BasketItemRepository basketItemRepository;
 
-    public UserService(ProductRepository productRepository, UserRepository userRepository, BasketRepository basketRepository) {
+    public UserService(ProductRepository productRepository,
+                       UserRepository userRepository,
+                       BasketRepository basketRepository,
+                       BasketItemRepository basketItemRepository) {
         this.productRepository = productRepository;
         this.userRepository = userRepository;
         this.basketRepository = basketRepository;
+        this.basketItemRepository = basketItemRepository;
     }
 
-    public List<ProductDto> getProductInBasket(Principal principal) {
+    public List<BasketItemDto> getProductsInBasket(Principal principal) {
         UserEntity user = userRepository.findByUserName(principal.getName())
                 .orElseThrow(() -> new UsernameNotFoundException("пользователь не найден"));
 
-        BasketEntity basket = basketRepository.findByUserId(user.getId());
+        BasketEntity basket = basketRepository.findByUserId(user.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Корзина не найдена"));
 
-        return basket.getProductList().stream()
-                .map(ProductDto::new)
-                .collect(Collectors.toList());
+        List<BasketItemEntity> basketItemList = basketItemRepository.findByBasket(basket);
+
+        if (basketItemList.isEmpty()) {
+            return List.of();
+        }
+
+        return basketItemList.stream().map(BasketItemDto::new).toList();
     }
 
     @Transactional
-    public ProductDto addProductToBasket(Long id, Principal principal) {
-        ProductEntity productToAdd = productRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Такой товар не найден"));
+    public BasketItemDto addProductToBasket(Long productId, Principal principal) {
+        ProductEntity product = productRepository.findById(productId)
+                .orElseThrow(() -> new EntityNotFoundException("Товар не найден"));
 
         UserEntity user = userRepository.findByUserName(principal.getName())
-                .orElseThrow(() -> new EntityNotFoundException("Пользователь"));
+                .orElseThrow(() -> new EntityNotFoundException("Пользователь не найден"));
 
-        BasketEntity basket = basketRepository.findByUserId(user.getId());
-        if (!basket.getProductList().contains(productToAdd)) {
-            basket.getProductList().add(productToAdd);
+        BasketEntity basket = basketRepository.findByUserId(user.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Корзина не найдена"));
+
+        BasketItemEntity basketItem = basketItemRepository.findByBasketAndProduct(basket, product)
+                .orElseGet(() -> {
+                    BasketItemEntity newBasketItem = new BasketItemEntity();
+                    newBasketItem.setBasket(basket);
+                    newBasketItem.setProduct(product);
+                    newBasketItem.setQuantity(1);
+                    basket.getBasketItems().add(newBasketItem);
+                    return newBasketItem;
+                });
+
+        basketItem.setQuantity(basketItem.getQuantity() + 1);
+        basketItemRepository.save(basketItem);
+
+        return new BasketItemDto(basketItem);
+    }
+
+    @Transactional
+    public BasketItemDto deleteProductFromBasket(Long productId, Principal principal) {
+        ProductEntity product = productRepository.findById(productId)
+                .orElseThrow(() -> new EntityNotFoundException("Товар не найден"));
+
+        UserEntity user = userRepository.findByUserName(principal.getName())
+                .orElseThrow(() -> new EntityNotFoundException("Пользователь не найден"));
+
+        BasketEntity basket = basketRepository.findByUserId(user.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Корзина не найдена"));
+
+        BasketItemEntity basketItem = basketItemRepository.findByBasketAndProduct(basket, product)
+                .orElseThrow(() -> new EntityNotFoundException("Товар не найден в корзине"));
+
+        if (basketItem.getQuantity() > 1) {
+            basketItem.setQuantity(basketItem.getQuantity() - 1);
+            basketItemRepository.save(basketItem);
+        } else {
+            basketItemRepository.delete(basketItem);
         }
-        basketRepository.save(basket);
 
-        return new ProductDto(productToAdd);
+        return new BasketItemDto(basketItem);
+    }
+
+    public List<ProductDto> getProductsInFavorites(Principal principal) {
+        UserEntity user = userRepository.findByUserName(principal.getName())
+                .orElseThrow(() -> new UsernameNotFoundException("пользователь не найден"));
+
+        Set<ProductEntity> productSet = user.getFavoriteProducts();
+
+        return productSet.stream().map(ProductDto::new).toList();
+    }
+
+    @Transactional
+    public ProductDto addProductToFavorites(Long productId, Principal principal) {
+        ProductEntity product = productRepository.findById(productId)
+                .orElseThrow(() -> new EntityNotFoundException("Товар не найден"));
+
+        UserEntity user = userRepository.findByUserName(principal.getName())
+                .orElseThrow(() -> new EntityNotFoundException("Пользователь не найден"));
+
+        user.getFavoriteProducts().add(product);
+        userRepository.save(user);
+
+        return new ProductDto(product);
+    }
+
+    @Transactional
+    public ProductDto deleteProductFromFavorites(Long productId, Principal principal) {
+        ProductEntity product = productRepository.findById(productId)
+                .orElseThrow(() -> new EntityNotFoundException("Товар не найден"));
+
+        UserEntity user = userRepository.findByUserName(principal.getName())
+                .orElseThrow(() -> new EntityNotFoundException("Пользователь не найден"));
+
+        user.getFavoriteProducts().remove(product);
+        userRepository.save(user);
+
+        return new ProductDto(product);
     }
 }
